package core;

/**
 * Der {@code InputHandler} verarbeitet und interpretiert Benutzereingaben im Spiel.
 *
 * <p>Er dient als zentrale Schnittstelle zwischen Tastatureingaben (z. B. WASD, Enter)
 * und den auszuführenden Aktionen im jeweiligen Spielzustand.</p>
 *
 * <p>Geplant ist eine Erweiterung zur kontextsensitiven Eingabeverarbeitung,
 * je nach aktivem {@code GameState} (z. B. Bewegung, Dialogauswahl, Kampfaktionen).</p>
 *
 * @author Cengiz
 * @since 2025-07-22
 */


public class InputHandler {
    //TODO: Eingabe-Logig aus den Klassen rausnehmen und hier Zentral verwalten.
}
